opam-version: "2.0"
version: "2.1"
maintainer:   "Thibaut Gudin <tgudin@besport.com>"
authors:      "Thibaut Gudin <tgudin@besport.com>"
homepage: "git+https://github.com/besport/ocaml-hls"
bug-reports: "git+https://github.com/besport/ocaml-hls/issues"
dev-repo: "git+https://github.com/besport/ocaml-hls"
license: "LGPL-2.1 with OCaml linking exception"
description: "Binding to the 'hls.js' plugin using gen_js_api"
synopsis: "Binding to the 'hls.js' plugin using gen_js_api"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.08.0" }
  "dune" {>= "2.8"}
  "gen_js_api"
  "js_of_ocaml" {>= "3.8.0"}
  "js_of_ocaml-ppx" {>= "3.8.0"}
]
